--- a/12000054.md
+++ b/12000054.md
@@ -1,3 +1,3 @@
 # Newton–Raphson-Method
 
-The Newton–Raphson-Method is a [Mathematical-Method](404.md).
+The Newton–Raphson-Method is a [Mathematical-Method](12000055.md).
