--- a/600021.md
+++ b/600021.md
@@ -1,3 +1,3 @@
-# The-Context-Truth
+# Truth
 
-The-Context-Truth is [The-Truth](600140.md) in a given [Context](600034.md).
+Truth is a [Measure](10000021.md) for [Correctness](600077.md).
