--- a/600158.md
+++ b/600158.md
@@ -1,3 +1,3 @@
 # Confession
 
-Confession is the [Correction](404.md) of a [False-Statement](600142.md).
+A Confession is the [Correction](600159.md) of a [False-Statement](600142.md).
