--- a/1971091109.md
+++ b/1971091109.md
@@ -1,3 +1,8 @@
 # My-Good-Old-Latex-Book
 
 My-Good-Old-Latex-Book is a [Book](700054.md) about [LaTeX](9300010.md).
+
+## Photos
+
+![](400000116.jpg)
+![](400000117.jpg)
