Add Excel and Chat-Gpt

--- a/23.md
+++ b/23.md
@@ -134,7 +134,7 @@ $$ F^12 = 128 $$
 
 The very last Step is for advanced Mathematicians:
 
-$$ F = 128^{1/12} = \sqrt[12]{128} $$
+$$ F = 128^{\frac{1}{12}} = \sqrt[12]{128} $$
 
 The Rest is "Just Doing", therefore we use a [Pocket-Caculater](20000019.md) for that, but a least this Time I double-check with the virtual Calculator from [My-Mac-Book](2000002.md):
 
@@ -148,7 +148,143 @@ Oh Boy, don't be stupid! We all know [Mens-Rule-Nr-1](200100004.md), so the Mist
 
 ![Don't forget: Ask Bert!](400000110.jpg)
 
-BTW: As some Readers might already have recognized, my female Colleague has just inventend the [Equal-Temperament](90000037.md).
+The next Day I get up very early for Traing with [My-Tennis-Teacher](1971991161.md). Afterwards I meet three [Women](40000010.md), who look like other [Versions](600149.md) to three of my known Choir-Colleagues, crazy.
+
+At the [Delhi-Palace](18071962.md) my dear [Asha](1971091162.md) gives me the [Advice](600150.md) to put [Focus](60143.md) in my Project on [The-Bad-Stuff](60121.md) because the [Good-Stuff](60120.md) is done by Others. I don't know if I understood her correctly, because she sometimes misses the right [German](600004.md) Words.
+
+After my Indian-[Charu](40000010.md) expresses her [Concern](10000063.md), that I am doing too many Projects in parallel, I try to reassure her with the [Argument](600151.md) that this Work will support my real [Goal](60058.md) and in the End Everything will go very quickly.
+
+We also briefly talk about Men in [India](140000064.md), who I have already heard Sometimes do not treat their Women very well, Asha's means, especially the Native Ones.
+
+This reminds me to a funny Conversation about replacing Men with Machines, that I had recently with a cute Blonde off [our](2010013.md) Choir-Rehersal:
+
+![Better use a Machine?](400000112.jpg)
+
+But let's focus on our Main-Topic: Because of [Rule-1](200100004.md) it is clear, that my ϕοκκινγ (Calculating)-Machines have Problems, therefore now I want to do really *all* manually.
+
+While eating [My-Favourite-Indian-Meal](404.md) I make a few Calculations in my Head and come to the Conclusion that I am able to reduce our Calculation-Problem to $\sqrt{2}$, which after all can be measured with [Geometry](13006000.md) and is related to the famous [Pythagorean-Theorem](12000053.md), the every diligent [Lerner](60087.md) knows by Heart:
+
+$$ a^2 + b^2 = c^2 $$
+
+But before I come back on that, I first buy some Equipment in a [Stationery-Shop](200020005.md), that I then transport with my Bicycle to the Bus-Station:
+
+![Tools for School](400000113.jpg)
+
+At the Bus-Station I have short Discussion with a young Woman about [Politics](141000000.md) and we came up with the Idea to use the [Schimpf-Eck](2010030.md) as a [Speakers-Corner](141000007.md). But before we can do that, we should definitely ask [Mr-Palmer](404.md) for more Traffic-Mitigation.
+
+Back at Home I read a new E-Mail from my Friend from Bottom-Up, were she first makes a [Confession](600158.md):
+
+> Hatte meine Tabelle falsch gelesen.
+
+Because of [Rule-1](200100004.md) is [Truth-by-Definition](600152.md) of course this must be a [White-Lie](600161.md) to make me feel better, such a nice [Cupcake](40000010.md) &#9749;, which now reminds me toa Discussion about [1:N-Relations](60093.md) I had this Afternoon mit [my](88.md) dear Fellow-Occupant.
+
+Then I read further and get to know, that [My-Female-Choir-Friend](1971091160.md) now also did a [Verification](600128.md) with her [Personal-Computer](404.md):
+
+> Nun habe ich in Excel nachgerechnet: F = (2^7)^(1/12) = 1,498307076877
+
+Well, of course we know that there are old Versions of [Excel](2000221.md) that produced wrong Results and oh Boy, we all remember the really nasty [Pentium-FDIV-Bug](72000002.md) from 1994, but what is the [Likelihood](600031.md), that my Friend is really affected by those Threats?
+
+And BTW, since serveral Years I get more and more the Impression that our [Development](404.md) is going into the wrong Direction, namely from [The-Better](60136.md) to [The-Worse](60153.md). A good Example is this 20-Year old and still comfortable [Running-Shoe](404.md), as seen Today in the early Evening:
+
+![Old but still Good!](400000115.jpg)
+
+But [Safety-First](404.md), so let's nevertheless do my planned [Measurement](10000022.md). Although my new Baby and I have been really careful, the Operation still gets a bit messy - obviously we need more physical [Training](600100.md):
+
+![Sloddy Work](400000114.jpg)
+
+But probably good enough, so now we can do Everything with Manual-Operation and without the Help of such silly Machines - so back to our last Equation:
+
+$$ F = 128^{\frac{1}{12}} $$
+
+So first let's apply on both Sides the Exponentiation an [Exponent](13000043.md) of Two:
+
+$$ F^2 = {128^{\frac{1}{12}}}^2 $$
+
+An [Exponentiation-Function](13000022.md) is defined by its [Base](13000040.md) and the [Parameter](13000041.md) of the [Function](13000011.md) is called the [Exponent](13000043.md) and as all good Mathematicians already know, our Exponentiation with Exponent 2 can be replaced by a [Multiplication](13000021.md) with 2 in the Exponent:
+
+$$ F^2 = 128^{\frac{1}{12} * 2} = 128^{\frac{1 * 2}{12}} = 128^{\frac{2}{12}} $$
+
+Now we can simplify the [Fraction](13000007.md) in the [Exponent](13000043.md) by a [Division](12000044.md) by the [Greatest-Common-Divisor](12000050.md):
+
+$$ F^2 = 128^{\frac{2}{12}} = 128^{\frac{\frac{2}{2}}{\frac{12}{2}}} = 128^{\frac{1}{6}} $$
+
+Ok cool, now we eliminate the Exponent on the left Side by [Exponentiation](13000022.md) with $\frac{1}{2}$:
+
+$$ F^{2*\frac{1}{2}} = 128^{\frac{1}{6} * \frac{1}{2}} $$
+
+Oehm, this somehow looks familiar, but thank Good, as every good [Informatic-Student](9999998.md) already knows by Heart, we fortunately can rewrite the Binary-Number 128 as Follows:
+
+$$ F = 128^\frac{1}{12} = (2 * 2 * 2 * 2 * 2 * 2 * 2)^\frac{1}{12} = {2^7}^\frac{1}{12} $$
+
+With the already successfully applied Mechanism, we further simplify that:
+
+$$ F = ({2^7})^\frac{1}{12} = 2^{7*\frac{1}{12}} = 2^{\frac{7}{12}} $$
+
+What the Φοκκ, obviously I made a Mistake in the Indian-Restaurant, because I cannot reduce this Term to $\sqrt{2}$, sorry my Bad. But no Problem, because all good Mathematicians know, we can use [Newton's–Method](12000054.md) for getting an [Approximation](600156.md) for the [Root-Function](13000023.md).
+
+Ohm, how is the simple Formuala expressed in LaTeX? As already mentioned, my Skills are a bit rusty here and there, but thanks God I have [My-Good-Old-Latex-Book](9300010.md):
+
+![Good-Old Book](400000116.jpg)
+
+Here a [Good-Man](404.md) with [Patience](41000007.md) is able find the [TeX-Symbols](60094.md), that are required for the Translation to the beautiful [Mathematics-Symbols](13000033.md):
+
+$$ x_{n + 1} = x_n - \frac{f(x_n)}{f'(x_n)} $$
+
+Because it is already late, I ask [Chat-Gpt](9000150.md) to do the Work for me, but without applying the "Potenz-Regel":
+
+```python
+def zwölfte_wurzel_berechnen(zahl, genauigkeit=1e-6, max_iterationen=100):
+    # Initialisiere den Schätzwert mit der Hälfte der Zahl
+    schätzwert = zahl / 2.0
+
+    for i in range(max_iterationen):
+        # Verwende die Newton-Raphson-Formel, um den nächsten Schätzwert zu berechnen
+        nächster_schätzwert = (11 * schätzwert**12 + zahl) / (12 * schätzwert**11)
+
+        # Überprüfe, ob die gewünschte Genauigkeit erreicht wurde
+        if abs(nächster_schätzwert - schätzwert) < genauigkeit:
+            return nächster_schätzwert
+
+        schätzwert = nächster_schätzwert
+
+    # Falls die gewünschte Genauigkeit nicht erreicht wurde, gebe den letzten Schätzwert aus
+    return schätzwert
+
+# Eingabe der Zahl, deren 12. Wurzel berechnet werden soll
+zahl = float(input("Bitte geben Sie eine Zahl ein: "))
+
+# Berechnung der 12. Wurzel
+ergebnis = zwölfte_wurzel_berechnen(zahl)
+
+# Ausgabe des Ergebnisses
+print(f"Die 12. Wurzel von {zahl} ist etwa {ergebnis}")
+
+```
+
+Then I run the Program and thank God, finally the [AI](250000038.md) and the [Interpreter](9010008.md) of [Python](9010003.md) come (at least almost ...) to the same Result as my [My-Female-Choir-Friend](1971091160.md):
+
+```bash
+✔ ~/All-Dings/777/2023.10.05-Wurzelberechnung [Master|…1126] 
+07:33 $ python3 Chat-Gpt-Without-Potenz.py
+Bitte geben Sie eine Zahl ein: 128
+Die 12. Wurzel von 128.0 ist etwa 1.498307076876681
+```
+
+Finally let's summarize in a [Table](700051.md), what Results we have seen up to now:
+
+| Method                |    Result          |
+|-----------------------|--------------------|
+| Frequency-Table       | 1,498...           |
+| Pocket-Calculator     | 1,4993071          |
+| Macbook-Calculator    | 1,499307076876681  |
+| Excel                 | 1,498307076877     |
+| Chat-Gpt-Newton       | 1.498307076876681  |
+
+You think, this cannot be [The-Truth](600140.md)? Stay tuned, because there are some Real-Working-Tiers in Tübingen:
+
+![Fake-Working-Tier](400000118.jpg)
+
+BTW: As some Readers might already have recognized, my female Colleague has just re-inventend the [Equal-Temperament](90000037.md).
 
 #### Blog-Chain-Time 2023.10.04-16:30 in Tübingen <a id="12001"/>
 ###### Topics: Zero-Wave-Theory
