--- a/23.md
+++ b/23.md
@@ -148,6 +148,8 @@ Oh Boy, don't be stupid! We all know [Mens-Rule-Nr-1](200100004.md), so the Mist
 
 ![Don't forget: Ask Bert!](400000110.jpg)
 
+#### Blog-Chain-Time 2023.10.05-10:00 in Tübingen <a id="12003"/>
+
 The next Day I get up very early for Traing with [My-Tennis-Teacher](1971991161.md). Afterwards I meet three [Women](40000010.md), who look like other [Versions](600149.md) to three of my known Choir-Colleagues, crazy.
 
 At the [Delhi-Palace](18071962.md) my dear [Asha](1971091162.md) gives me the [Advice](600150.md) to put [Focus](60143.md) in my Project on [The-Bad-Stuff](60121.md) because the [Good-Stuff](60120.md) is done by Others. I don't know if I understood her correctly, because she sometimes misses the right [German](600004.md) Words.
@@ -172,7 +174,9 @@ But before I come back on that, I first buy some Equipment in a [Stationery-Shop
 
 At the Bus-Station I have short Discussion with a young Woman about [Politics](141000000.md) and we came up with the Idea to use the [Schimpf-Eck](2010030.md) as a [Speakers-Corner](141000007.md). But before we can do that, we should definitely ask [Mr-Palmer](404.md) for more Traffic-Mitigation.
 
-Back at Home I read a new E-Mail from my Friend from Bottom-Up, were she first makes a [Confession](600158.md):
+#### Blog-Chain-Time 2023.10.05-14:00 in Tübingen <a id="12004"/>
+
+Back at Home I finally manage it to read the last E-Mail from my Friend from Bottom-Up, were she first makes a [Confession](600158.md):
 
 > Hatte meine Tabelle falsch gelesen.
 
@@ -269,6 +273,7 @@ Then I run the Program and thank God, finally the [AI](250000038.md) and the [In
 Bitte geben Sie eine Zahl ein: 128
 Die 12. Wurzel von 128.0 ist etwa 1.498307076876681
 ```
+#### Blog-Chain-Time 2023.10.06-04:45 in Tübingen <a id="12005"/>
 
 Finally let's summarize in a [Table](700051.md), what Results we have seen up to now:
 
