--- a/23.md
+++ b/23.md
@@ -224,6 +224,8 @@ With the already successfully applied Mechanism, we further simplify that:
 
 $$ F = ({2^7})^\frac{1}{12} = 2^{7*\frac{1}{12}} = 2^{\frac{7}{12}} $$
 
+#### Blog-Chain-Time 2023.10.06-04:00 in Tübingen <a id="12006"/>
+
 What the Φοκκ, obviously I made a Mistake in the Indian-Restaurant, because I cannot reduce this Term to $\sqrt{2}$, sorry my Bad. But no Problem, because all good Mathematicians know, we can use [Newton's–Method](12000054.md) for getting an [Approximation](600156.md) for the [Root-Function](13000023.md).
 
 Ohm, how is the simple Formuala expressed in LaTeX? As already mentioned, my Skills are a bit rusty here and there, but thanks God I have [My-Good-Old-Latex-Book](9300010.md):
@@ -273,6 +275,7 @@ Then I run the Program and thank God, finally the [AI](250000038.md) and the [In
 Bitte geben Sie eine Zahl ein: 128
 Die 12. Wurzel von 128.0 ist etwa 1.498307076876681
 ```
+
 #### Blog-Chain-Time 2023.10.06-04:45 in Tübingen <a id="12005"/>
 
 Finally let's summarize in a [Table](700051.md), what Results we have seen up to now:
