--- a/23.md
+++ b/23.md
@@ -290,7 +290,7 @@ Finally let's summarize in a [Table](700051.md), what Results we have seen up to
 
 You think, this cannot be [The-Truth](600140.md)? Stay tuned, because there are some Real-Working-Tiers in Tübingen:
 
-![Fake-Working-Tier](400000118.jpg)
+![Working-Tier](400000118.jpg)
 
 PS: As some Readers might already have recognized, my female Colleague has just re-inventend the [Equal-Temperament](90000037.md).
 PPS: Damn, I forgot to ask Bert, Today.
