Add more Information

--- a/1971091109.md
+++ b/1971091109.md
@@ -1,6 +1,6 @@
 # My-Good-Old-Latex-Book
 
-My-Good-Old-Latex-Book is a [Book](700054.md) about [LaTeX](9300010.md).
+My-Good-Old-Latex-Book is a [Book](700054.md) about [LaTeX](9300010.md), that [I](0.mg) bought during my Studies.
 
 ## Photos
 
