--- a/23.md
+++ b/23.md
@@ -293,7 +293,7 @@ You think, this cannot be [The-Truth](600140.md)? Stay tuned, because here is be
 ![Working-Tier](400000118.jpg)
 
 PS: As some Readers might already have recognized, my female Colleague has just re-inventend the [Equal-Temperament](90000037.md). \
-PPS: Damn, I forgot to ask Bert, Today.
+PPS: I forgot to ask Bert, damn!
 
 #### Blog-Chain-Time 2023.10.04-16:30 in Tübingen <a id="12001"/>
 ###### Topics: Zero-Wave-Theory
