--- a/12000054.md
+++ b/12000054.md
@@ -1,3 +1,3 @@
-# Newton–Raphson-Method
+# Newton-Raphson-Method
 
 The Newton–Raphson-Method is a [Mathematical-Method](12000055.md) and an [Approximation-Algorithm](250000039.md).
