--- a/23.md
+++ b/23.md
@@ -65,6 +65,19 @@
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
+#### Blog-Chain-Time 2023.10.12-18:00 in Tübingen <a id="12007"/>
+###### Topics: Zero-Wave-Theory
+
+After I my [favorite](203500003.md) Meal at the [Morra-Imbiss](2010031.md) and a short Conversation with [Heisam](150000006.md), on my Way back Home I meet again [My-Python-Neighbour](1971091159.md).
+
+He speaks to me about the Problem with the Zero-Waves and says that with the [Superposition](10000065.md) an [Interferrence](10000064.md) arises, where the (missing) Engery goes and therefore the [Energy-Conservation-Law](10000017.md) is not violated.
+
+I still have some Doubts and try to explain my View of Things with a "Cigarette-Drawing" on the [Walk-Way](1100000018.md). Here a more accurate Version of my [Side-Walk](1100000018.md)-Plot:
+
+![Sinus-Wave-Superposition](400000130.png)
+
+At least in this simple Scenario both [Sinus](12000057.md)-Waves with 1 Hz [Frequency](10000016.md) and 180 Degree Phase-Shift erase each other completely.
+
 #### Blog-Chain-Time 2023.10.04-19:51 in Tübingen <a id="12002"/>
 ###### Topics: Music, Pythagorean-Comma
 
