--- a/2010031.md
+++ b/2010031.md
@@ -1,3 +1,3 @@
 # Morra-Imbiss
 
-Morra-Imbis is a [Snack-Bar](200000001.md) in [Tübingen](2000001).
+The Morra-Imbis is a [Snack-Bar](200000001.md) in [Tübingen](2000001).
