--- a/23.md
+++ b/23.md
@@ -68,7 +68,7 @@
 #### Blog-Chain-Time 2023.10.12-18:00 in Tübingen <a id="12007"/>
 ###### Topics: Zero-Wave-Theory
 
-After I my [favorite](203500003.md) Meal at the [Morra-Imbiss](2010031.md) and a short Conversation with [Heisam](150000006.md), on my Way back Home I meet again [My-Python-Neighbour](1971091159.md), who is by the Way a retired [Physics-Teacher](630004.md).
+After a good Meal at the [Morra-Imbiss](2010031.md) and a theological Conversation with [Heisam](150000006.md), on my Way back Home I meet again [My-Python-Neighbour](1971091159.md), who is by the Way a retired [Physics-Teacher](630004.md).
 
 He speaks to me about the Problem with the Zero-Waves and says that with the [Superposition](10000065.md) an [Interferrence](10000064.md) arises, where the (missing) Engery goes and therefore the [Energy-Conservation-Law](10000017.md) is not violated.
 
