--- a/23.md
+++ b/23.md
@@ -79,7 +79,7 @@ For an [Explanation](60014.md) of this [Technology](16000001.md), here a more ac
 ![Sinus-Wave-Superposition](400000130.png)
 
 #### Blog-Chain-Time 2023.10.04-19:51 in Tübingen <a id="12002"/>
-###### Topics: Music, Pythagorean-Comma
+###### Topics: Pythagorean-Comma
 
 After the last [Choir-Rehearsal](90001002.md) I had a longer Discussion with my [Female-Choir-Friend](1971091160.md) about the old [[1]](#12051) Story of the [Pythagorean-Comma](90000013.md). As reported, the Problem seems to be, that the [Pure-Fiths](90000039.md) do not fit 100% to the [Pure-Octaves](90000028.md).
 
@@ -162,6 +162,7 @@ Oh Boy, don't be stupid! We all know [Mens-Rule-Nr-1](200100004.md), so the Mist
 ![Don't forget: Ask Bert!](400000110.jpg)
 
 #### Blog-Chain-Time 2023.10.05-10:00 in Tübingen <a id="12003"/>
+###### Topics: Pythagorean-Comma
 
 The next Day I get up very early for Traing with [My-Tennis-Teacher](1971991161.md). Afterwards I meet three [Women](40000010.md), who look like other [Versions](600149.md) to three of my known Choir-Colleagues, crazy.
 
@@ -188,6 +189,7 @@ But before I come back on that, I first buy some Equipment in a [Stationery-Shop
 At the Bus-Station I have short Discussion with a young Woman about [Politics](141000000.md) and we came up with the Idea to use the [Schimpf-Eck](2010030.md) as a [Speakers-Corner](141000007.md). But before we can do that, we should definitely ask [Mr-Palmer](404.md) for more Traffic-Mitigation.
 
 #### Blog-Chain-Time 2023.10.05-14:00 in Tübingen <a id="12004"/>
+###### Topics: Pythagorean-Comma
 
 Back at Home I finally manage it to read the last E-Mail from my Friend from Bottom-Up, were she first makes a [Confession](600158.md):
 
@@ -238,6 +240,7 @@ With the already successfully applied Mechanism, we further simplify that:
 $$ F = ({2^7})^\frac{1}{12} = 2^{7*\frac{1}{12}} = 2^{\frac{7}{12}} $$
 
 #### Blog-Chain-Time 2023.10.06-04:00 in Tübingen <a id="12006"/>
+###### Topics: Pythagorean-Comma
 
 What the Φοκκ, obviously I made a Mistake in the Indian-Restaurant, because I cannot reduce this Term to $\sqrt{2}$, sorry my Bad. But no Problem, because all good Mathematicians know, we can use [Newton's–Method](12000054.md) for getting an [Approximation](600156.md) for the [Root-Function](13000023.md).
 
@@ -290,6 +293,7 @@ Die 12. Wurzel von 128.0 ist etwa 1.498307076876681
 ```
 
 #### Blog-Chain-Time 2023.10.06-04:45 in Tübingen <a id="12005"/>
+###### Topics: Pythagorean-Comma
 
 Finally let's summarize in a [Table](700051.md), what Results we have seen up to now:
 
