--- a/600164.md
+++ b/600164.md
@@ -1,3 +1,3 @@
 # Transformation
 
-A Transformation is a [Process](60062.md).
+A Transformation is a [Process](60062.md) on the [Meaning](60002.md) of a [Thing](60003.md).
