--- a/10000067.md
+++ b/10000067.md
@@ -1,3 +1,3 @@
-# Sound-Cancellation
+# Physics-Excuse
 
-Sound-Cancellation is a [Physical-Process](10000042.md), that uses [Anti-Sound-Waves](10000066.md).
+A Physics-Excuse is an [Excuse](600166.md) in a [Physics-System](10000068.md).
