--- a/200030103.md
+++ b/200030103.md
@@ -1,3 +1,3 @@
 # Star-Trek-Universe
 
-The Star-Treck-Universe is a fictive [Space-Time-Continuum](10000027.md).
+The Star-Treck-Universe is a fictive [Universe](10000027.md).
