--- a/23.md
+++ b/23.md
@@ -65,6 +65,34 @@
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
+#### Blog-Chain-Time 2023.10.12-15:40 in Tübingen <a id="12008"/>
+###### Topics: Zero-Wave-Theory, Invention
+
+I meet my [Head-Of-House-Neighbour](1971091164.md) and explain the Zero-Wave-Theory by means of my latest Sinus-[Plot](700021.md). She agrees with me, that it all sounds reasonable.
+
+After I complaine, that even the best [Experts](12000000.md), like [Mr-Reinhard](70000066.md), could not provide a simple [Explanation](60014.md) for this hypotheticsl [Phenomenon](10000036.md), she gives me the Advise, to speak to our [Crocodile-Dundee-Neighbour](1971091165.md), who owns a [Diploma](640020.md) in [Physics](10000000.md).
+
+Coincidentally some Minutes later I meet him on a Smoing-Round and approach him about the Problem. He agrees, that there are two [Options]() for the [Energy](10000040.md) in our Scenario, namely [Trasformation](600164.md) or [Elimination](600165.md).
+
+For the Former my Friend means, that for the Former the standard [Phyics-Excuse](10000069.md) is [Trasformation](600164.md) into [Heat](10000070.md).
+
+Well, Heat might be a good Choice for [Sound-Waves](10000066.md), but, as already reported [[2]](#12052), for [Light-Waves](10000012.md) there is still the Option of [Transformation](600164.md) from the [Electric-Field](10000013.md) into the [Magnetic-Field](10000014.md).
+
+So now at least for Sound-Waves we have two possible [Theories](7000001.md):
+
+- Transformation into [Heat-Energy](10000070.md)
+- Transformation into [Zero-Energy](10000071.md)
+
+I then get the [Idea](600012.md) to build a [Device](20000000.md), that uses this [Property](60059.md) for [Heating](10000072.md) or [Cooling](10000073.md) and depending on [The-Truth](600140.md) we can do either the Former or the Later.
+
+Then I give to Consideration, that the Energy might not be eliminated, but instead moved to a [Parallel-Universe](10000075.md). In the worst Case we would produce [Globa-Warming](400000002.md) for our [Alien-Friends](40000031.md), oh Man.
+
+Fortunately my [Neighbour-Friend](1971091165.md) calms me down with the [Argument](600151.md), that it also could be a [Inanimate-Universe](10000077.md) and therefore we could use our Device without [Violation](60075.md) of our [Ethic-Rules](14400001.md).
+
+Cool (or hot?), let's make it real, here a Concept-Drawing of the Function of our new [Invention](60124.md):
+
+![Zero-Wave Device](400000131.png)
+
 #### Blog-Chain-Time 2023.10.11-18:00 in Tübingen <a id="12007"/>
 ###### Topics: Zero-Wave-Theory
 
@@ -330,7 +358,8 @@ Perhaps this [Idea](600012.md) is good enough for him and we can win together ye
 ### Footnotes
 
 [<a id="12050"/>0] [Beginnings of Zero-Wave-Theory](21.md#1804) \
-[<a id="12051"/>1] [Pythagorean-Comma](#10102)
+[<a id="12051"/>1] [Pythagorean-Comma](#10102) \
+[<a id="12052"/>2] [Electro-Magnetic-Transofmatino](21.md#1804)
 
 ## Day-109: The Don't-Waste-App <a id="10900"/>
 
