--- a/23.md
+++ b/23.md
@@ -89,7 +89,7 @@ Then I give to Consideration, that the Energy might not be eliminated, but inste
 
 Fortunately my [Neighbour-Friend](1971091165.md) calms me down with the [Argument](600151.md), that it also could be a [Inanimate-Universe](10000077.md) and therefore we could use our Device without [Violation](60075.md) of our [Ethic-Rules](14400001.md).
 
-Cool (or hot?), let's make it real, here a Concept-Drawing of the Function of our new [Invention](60124.md):
+Either cool or hot, here a Concept-Drawing of the Function of our great [Invention](60124.md):
 
 ![Zero-Wave Device](400000131.png)
 
