--- a/600166.md
+++ b/600166.md
@@ -1,3 +1,3 @@
 # Excuse
 
-An Excuse is a [False-Statement](600142.md), that is used as [Explanation](60014.md) for an [Error](60074.md).
+An Excuse is a [False-Statement](600142.md) with the [Goal](60058.md) to mitigate an [Error](60074.md).
