Fix Typos and improve Description

--- a/23.md
+++ b/23.md
@@ -68,28 +68,26 @@
 #### Blog-Chain-Time 2023.10.12-15:40 in Tübingen <a id="12008"/>
 ###### Topics: Zero-Wave-Theory, Invention
 
-I meet my [Head-Of-House-Neighbour](1971091164.md) and explain the Zero-Wave-Theory by means of my latest Sinus-[Plot](700021.md). She agrees with me, that it all sounds reasonable.
+I meet my [Head-Of-House-Neighbour](1971091164.md) to explain the latest Sinus-[Plot](700021.md) and she agrees that my [Zero-Wave-Theory](301000002.md) sounds reasonable.
 
-After I complaine, that even the best [Experts](12000000.md), like [Mr-Reinhard](70000066.md), could not provide a simple [Explanation](60014.md) for this hypotheticsl [Phenomenon](10000036.md), she gives me the Advise, to speak to our [Crocodile-Dundee-Neighbour](1971091165.md), who owns a [Diploma](640020.md) in [Physics](10000000.md).
+After my [Complaint](600167.md), that even the [Experts](12000000.md) cannot not provide a good [Explanation](60014.md) for this rather simple [Phenomenon](10000036.md), she gives me the [Tip](600168.md), to speak with our [Crocodile-Dundee-Neighbour](1971091165.md), who by the Way owns a [Diploma](640020.md) in [Physics](10000000.md).
 
-Coincidentally some Minutes later I meet him on a Smoing-Round and approach him about the Problem. He agrees, that there are two [Options]() for the [Energy](10000040.md) in our Scenario, namely [Trasformation](600164.md) or [Elimination](600165.md).
+Coincidentally some Minutes later I meet him on a Smoking-Round and approach him about the Problem. He agrees, that there are two possible [Truths](600021.md) for the missing [Energy](10000040.md) in our Scenario, namely [Elimination](600165.md) or [Transformation](600164.md).
 
-For the Former my Friend means, that for the Former the standard [Phyics-Excuse](10000069.md) is [Trasformation](600164.md) into [Heat](10000070.md).
+For the Former I suggest to define Elimination as Transformation into [Zero-Engery](10000071.md), that is carried by [Zero-Particles](10000061.md) or [Zero-Waves](10000061.md), for the Former my Friend suggests to use the standard [Physics-Excuse](10000069.md) and assume a [Trasformation](600164.md) into [Heat](10000070.md).
 
-Well, Heat might be a good Choice for [Sound-Waves](10000066.md), but, as already reported [[2]](#12052), for [Light-Waves](10000012.md) there is still the Option of [Transformation](600164.md) from the [Electric-Field](10000013.md) into the [Magnetic-Field](10000014.md).
+Not 100% sure for [Light-Waves](10000012.md) [[2]](#12052), but at least for [Sound-Waves](40200001.md) now we have two [Theories](7000001.md) with a reasonable [Likelihood](600031.md):
 
-So now at least for Sound-Waves we have two possible [Theories](7000001.md):
+1. Transformation into [Heat-Energy](10000070.md)
+2. Transformation into [Zero-Energy](10000071.md)
 
-- Transformation into [Heat-Energy](10000070.md)
-- Transformation into [Zero-Energy](10000071.md)
+With this Knowledge I then get the [Idea](600012.md) of building a [Device](20000000.md) for [Heating](10000072.md) or [Cooling](10000073.md) and depending on [The-Truth](600140.md) we can do either the Former or the Later.
 
-I then get the [Idea](600012.md) to build a [Device](20000000.md), that uses this [Property](60059.md) for [Heating](10000072.md) or [Cooling](10000073.md) and depending on [The-Truth](600140.md) we can do either the Former or the Later.
+Then I give to Consideration, that for the second Case the Energy might not be eliminated, but instead might be channeld into a [Parallel-Universe](10000075.md). In the worst Scenario we would produce [Global-Warming](400000002.md) for our [Alien-Friends](40000031.md).
 
-Then I give to Consideration, that the Energy might not be eliminated, but instead moved to a [Parallel-Universe](10000075.md). In the worst Case we would produce [Globa-Warming](400000002.md) for our [Alien-Friends](40000031.md), oh Man.
+Fortunately my [Neighbour-Friend](1971091165.md) calms me down a bit with the [Argument](600151.md), that this could be an [Inanimate-Universe](10000077.md) and therefore we can use our new Device without [Violation](60075.md) of [Ethic-Rules](14400001.md).
 
-Fortunately my [Neighbour-Friend](1971091165.md) calms me down with the [Argument](600151.md), that it also could be a [Inanimate-Universe](10000077.md) and therefore we could use our Device without [Violation](60075.md) of our [Ethic-Rules](14400001.md).
-
-Either cool or hot, here a Concept-Drawing of the Function of our great [Invention](60124.md):
+Either cool or not, here a Concept-Drawing for the Function of our [Invention](60124.md):
 
 ![Zero-Wave Device](400000131.png)
 
