--- a/23.md
+++ b/23.md
@@ -83,7 +83,7 @@ Not 100% sure for [Light-Waves](10000012.md) [[2]](#12052), but at least for [So
 
 With this Knowledge I then get the [Idea](600012.md) of building a [Device](20000000.md) for [Heating](10000072.md) or [Cooling](10000073.md) and depending on [The-Truth](600140.md) we can do either the Former or the Later.
 
-Then I give to Consideration, that for the second Case the Energy might not be eliminated, but instead might be channeld into a [Parallel-Universe](10000075.md). In the worst Scenario we would produce [Global-Warming](400000002.md) for our [Alien-Friends](40000031.md).
+Then I give to Consideration, that for the second Case the Energy might not be eliminated, but instead is channeld into a [Parallel-Universe](10000075.md). In the worst Scenario we would produce [Global-Warming](400000002.md) for our [Alien-Friends](40000031.md).
 
 Fortunately my [Neighbour-Friend](1971091165.md) calms me down a bit with the [Argument](600151.md), that this could be an [Inanimate-Universe](10000077.md) and therefore we can use our new Device without [Violation](60075.md) of [Ethic-Rules](14400001.md).
 
