--- a/23.md
+++ b/23.md
@@ -70,7 +70,7 @@
 
 I meet my [Head-Of-House-Neighbour](1971091164.md) to explain the latest Sinus-[Plot](700021.md) and she agrees that my [Zero-Wave-Theory](301000002.md) sounds reasonable.
 
-After my [Complaint](600167.md), that even the [Experts](12000000.md) cannot not provide a good [Explanation](60014.md) for this rather simple [Phenomenon](10000036.md), she gives me the [Tip](600168.md), to speak with our [Crocodile-Dundee-Neighbour](1971091165.md), who by the Way owns a [Diploma](640020.md) in [Physics](10000000.md).
+After my [Complaint](600167.md), that even the [Experts](12000000.md) cannot not provide a good [Explanation](60014.md) for this rather simple [Question](600107.md), she gives me the [Tip](600168.md), to speak with our [Crocodile-Dundee-Neighbour](1971091165.md), who by the Way owns a [Diploma](640020.md) in [Physics](10000000.md).
 
 Coincidentally some Minutes later I meet him on a Smoking-Round and approach him about the Problem. He agrees, that there are two possible [Truths](600021.md) for the missing [Energy](10000040.md) in our Scenario, namely [Elimination](600165.md) or [Transformation](600164.md).
 
