--- a/23.md
+++ b/23.md
@@ -89,7 +89,7 @@ Fortunately my [Neighbour-Friend](1971091165.md) calms me down a bit with the [A
 
 Either cool or not, here a Concept-Drawing for the Function of our [Invention](60124.md):
 
-![Zero-Wave Device](400000131.png)
+![Zero-Wave-Device](400000131.png)
 
 #### Blog-Chain-Time 2023.10.11-18:00 in Tübingen <a id="12007"/>
 ###### Topics: Zero-Wave-Theory
