--- a/23.md
+++ b/23.md
@@ -68,26 +68,26 @@
 #### Blog-Chain-Time 2023.10.12-15:40 in Tübingen <a id="12008"/>
 ###### Topics: Zero-Wave-Theory, Invention
 
-I meet my [Head-Of-House-Neighbour](1971091164.md) to explain the latest Sinus-[Plot](700021.md) and she agrees that my [Zero-Wave-Theory](301000002.md) sounds reasonable.
+In Front of the Home-Door I meet our [Head-Of-House](1971091164.md) and seize the Opportunitiy to show her my latest Sinus-[Plot](700021.md). She agrees that my [Zero-Wave-Theory](301000002.md) sounds reasonable.
 
-After my [Complaint](600167.md), that even the [Experts](12000000.md) cannot not provide a good [Explanation](60014.md) for this rather simple [Question](600107.md), she gives me the [Tip](600168.md), to speak with our [Crocodile-Dundee-Neighbour](1971091165.md), who by the Way owns a [Diploma](640020.md) in [Physics](10000000.md).
+After my [Complaint](600167.md), that even the best [Experts](12000000.md) cannot provide good [Explanations](60014.md) for this rather simple [Question](600107.md), she suggests to speak with [Crocodile-Dundee](1971091165.md), who even owns a [Diploma](640020.md) in [Physics](10000000.md).
 
-Coincidentally some Minutes later I meet him on a Smoking-Round and approach him about the Problem. He agrees, that there are two possible [Truths](600021.md) for the missing [Energy](10000040.md) in our Scenario, namely [Elimination](600165.md) or [Transformation](600164.md).
+Coincidentally some Minutes later I meet him on a Smoking-Round: We come up with two possible [Truths](600021.md) for the missing [Energy](10000040.md), namely [Elimination](600165.md) or [Transformation](600164.md).
 
-For the Former I suggest to define Elimination as Transformation into [Zero-Engery](10000071.md), that is carried by [Zero-Particles](10000061.md) or [Zero-Waves](10000061.md), for the Former my Friend suggests to use the standard [Physics-Excuse](10000069.md) and assume a [Trasformation](600164.md) into [Heat](10000070.md).
+In Order to save our beloved [Engergy-Conservatoin-Law](10000017.md), I already defined the Former as Transformation into [Zero-Engery](10000071.md), which is carried by [Zero-Things](10000061.md). For the Latter my Friend suggests to use the standard [Physics-Excuse](10000069.md), namely [Trasformation](600164.md) into [Heat](10000070.md).
 
-Not 100% sure for [Light-Waves](10000012.md) [[2]](#12052), but at least for [Sound-Waves](40200001.md) now we have two [Theories](7000001.md) with a reasonable [Likelihood](600031.md):
+Still not 100% sure about [Light-Waves](10000012.md) [[2]](#12052), but at least for [Sound-Waves](40200001.md), we now have two reasonable [Theories](7000001.md):
 
 1. Transformation into [Heat-Energy](10000070.md)
 2. Transformation into [Zero-Energy](10000071.md)
 
-With this Knowledge I then get the [Idea](600012.md) of building a [Device](20000000.md) for [Heating](10000072.md) or [Cooling](10000073.md) and depending on [The-Truth](600140.md) we can do either the Former or the Later.
+Depending on [The-Truth](600140.md), we now can build a [Device](20000000.md) either for [Heating](10000072.md) or [Cooling](10000073.md), where especially the second Option sounds very promising for fighting our [Global-Warming](400000002.md).
 
-Then I give to Consideration, that for the second Case Energy might not be eliminated at all, but instead could be channeled into a [Parallel-Universe](10000075.md) and in the worst Scenario we would produce yet another [Global-Warming](400000002.md) for our [Alien-Friends](40000031.md).
+But for this Case I give to Consideration, that the [Zero-Particles](10000061.md) might be channeled somehow into a [Parallel-Universe](10000075.md), where they are transformed again into Heat-Energy and then we would unintentionally produce [Global-Warming](400000002.md) for our [Alien-Friends](40000031.md), Damn!
 
-Fortunately my [Neighbour-Friend](1971091165.md) calms me down a bit with the [Argument](600151.md), that this could be an [Inanimate-Universe](10000077.md) and therefore we can use our new Device without [Violation](60075.md) of [Ethic-Rules](14400001.md).
+Fortunately my [Neighbour-Friend](1971091165.md) calms me down a bit with the [Argument](600151.md), that the Energy could also be sent to an [Inanimate-Universe](10000077.md) without [Violation](60075.md) of any [Ethic-Rules](14400001.md).
 
-Either cool or not, here a Concept-Drawing for the Function of our [Invention](60124.md):
+Either cool or not, here the first Concept-Drawing for the Function of my new [Invention](60124.md):
 
 ![Zero-Wave-Device](400000131.png)
 
