--- a/23.md
+++ b/23.md
@@ -68,7 +68,7 @@
 #### Blog-Chain-Time 2023.10.12-15:40 in Tübingen <a id="12008"/>
 ###### Topics: Zero-Wave-Theory, Invention
 
-In Front of the Home-Door I meet our [Head-Of-House](1971091164.md) and seize the Opportunitiy to show her my latest Sinus-[Plot](700021.md). She agrees that my [Zero-Wave-Theory](301000002.md) sounds reasonable.
+In Front of the Home-Door I meet our [Head-Of-House](1971091164.md) and seize the Opportunitiy to show her my [latest](#12009) Sinus-[Plot](700021.md). She agrees that my [Zero-Wave-Theory](301000002.md) sounds reasonable.
 
 After my [Complaint](600167.md), that even the best [Experts](12000000.md) cannot provide good [Explanations](60014.md) for this rather simple [Question](600107.md), she suggests to speak with [Crocodile-Dundee](1971091165.md), who even owns a [Diploma](640020.md) in [Physics](10000000.md).
 
@@ -102,7 +102,7 @@ I still have some Doubts and try to explain my View of Things with a "Cigarette-
 
 For an [Explanation](60014.md) of this [Technology](16000001.md), here a more accurate Version of my [Side-Walk](1100000018.md)-Plot:
 
-![Sinus-Wave-Superposition](400000130.png)
+![Sinus-Wave-Superposition](400000130.png) {#12009:1}
 
 #### Blog-Chain-Time 2023.10.04-19:51 in Tübingen <a id="12002"/>
 ###### Topics: Pythagorean-Comma
@@ -357,7 +357,7 @@ Perhaps this [Idea](600012.md) is good enough for him and we can win together ye
 
 [<a id="12050"/>0] [Beginnings of Zero-Wave-Theory](21.md#1804) \
 [<a id="12051"/>1] [Pythagorean-Comma](#10102) \
-[<a id="12052"/>2] [Electro-Magnetic-Transofmatino](21.md#1804)
+[<a id="12052"/>2] [Electro-Magnetic-Transformation](21.md#1804)
 
 ## Day-109: The Don't-Waste-App <a id="10900"/>
 
