--- a/23.md
+++ b/23.md
@@ -70,7 +70,7 @@
 
 In Front of the Home-Door I meet our [Head-Of-House](1971091164.md) and seize the Opportunitiy to show her my [latest](#12009) Sinus-[Plot](700021.md). She agrees that my [Zero-Wave-Theory](301000002.md) sounds reasonable.
 
-After my [Complaint](600167.md), that up to now even the best [Experts](12000000.md) cannot provide good [Explanations](60014.md) for this rather simple [Question](600107.md), she suggests to speak with [Crocodile-Dundee](1971091165.md), who even owns a [Diploma](640020.md) in [Physics](10000000.md).
+After my [Complaint](600167.md), that up to now even the best [Experts](12000000.md) could not provide good [Explanations](60014.md) for this rather simple [Question](600107.md), she suggests to speak with [Crocodile-Dundee](1971091165.md), who even owns a [Diploma](640020.md) in [Physics](10000000.md).
 
 Coincidentally some Minutes later I meet him on a Smoking-Round: We come up with two possible [Truths](600021.md) for the missing [Energy](10000040.md), namely [Elimination](600165.md) or [Transformation](600164.md).
 
