--- a/23.md
+++ b/23.md
@@ -72,7 +72,7 @@ In Front of the Home-Door I meet our [Head-Of-House](1971091164.md) and seize th
 
 After my [Complaint](600167.md), that up to now even the best [Experts](12000000.md) could not provide a good [Explanation](60014.md) for this rather simple [Question](600107.md), she suggests to speak with [Crocodile-Dundee](1971091165.md), who even owns a [Diploma](640020.md) in [Physics](10000000.md).
 
-Coincidentally some Minutes later I meet him on a Smoking-Round: We come up with two possible [Truths](600021.md) for the missing [Energy](10000040.md), namely [Elimination](600165.md) or [Transformation](600164.md).
+Coincidentally some Minutes later I meet him on a Smoking-Round and we come up with two possible [Truths](600021.md) for the missing [Energy](10000040.md), namely [Elimination](600165.md) or [Transformation](600164.md).
 
 In Order to save our beloved [Engergy-Conservatoin-Law](10000017.md), I already defined the Former as Transformation into [Zero-Engery](10000071.md), which is carried by [Zero-Things](10000061.md). For the Latter my Friend suggests to use the standard [Physics-Excuse](10000069.md), namely [Trasformation](600164.md) into [Heat](10000070.md).
 
