--- a/620004.md
+++ b/620004.md
@@ -1,3 +1,3 @@
 # Start-Location
 
-A Start-Location is the [Location](404.md) for the [Start](404.md) of a [Location-Path](620005.md).
+A Start-Location is the [Location](620002.md) of the [Start](60154.md) in a [Location-Path](620005.md).
