Rename Sound -> Sound-Wave

--- a/40200001.md
+++ b/40200001.md
@@ -1,3 +1,3 @@
-# Sound
+# Sound-Wave
 
-Sound is [Vibration](600084.md) of [Matter](10000034.md).
+A Sound-Wave is [Vibration](600084.md) of [Matter](10000034.md).
