--- a/10000070.md
+++ b/10000070.md
@@ -1,3 +1,3 @@
-# Heat-Energy
+# Thermal-Energy
 
-Heat-Energy is [Energy](10000009.md) in a [Physics-System](10000068.md).
+Thermal-Energy is [Energy](10000009.md) in a [Physics-System](10000068.md).
