--- a/21.md
+++ b/21.md
@@ -16,7 +16,7 @@
  - [Day-79](#7900) MPA in Köln
  - [Day-77](#7700) Tennis with Hobby-Team
  - [Day-76](#7600) MPA-Plan for Cologne
- - [Day-74](#7400) MPA again
+ - [Day-74](#7400) MPA and Physics
  - [Day-72](#7200) Back to the Future
  - [Day-71](#7100) Movie "2 Fast 2 Furious"
  - [Day-70](#7000) About Moral
@@ -1192,7 +1192,7 @@ While unpacking the rest of the Clothings, I realize that my new [Track-Suite](2
 
 Had a loud Dispute with my Flat-Mate, because I bought the "wrong" Din-A4 [Envelopes](205000001.md). Although she has A4-Documents, they are difficult to fit into the "Container" with the same Size. Therefore I go to our [Post-Office](200020001.md) and buy some slightly bigger Din-B4 Envelopes. But I still wonder, which Documents should be put into the Din-A4 Envelopes?
 
-## Day-18: MPA again <a id="1800"/>
+## Day-18: MPA and Physics <a id="1800"/>
 
 #### Blog-Chain-Time 2023.04.11-12:30 in Tübingen <a id="1801"/>
 ###### Topics: MPA
