--- a/10000066.md
+++ b/10000066.md
@@ -1,3 +1,3 @@
-# Anti-Sound-Waves-Wave
+# Anti-Sound-Wave
 
-An Anti-Sound-Wave is a [Sound-Wave](40200001.md) that eliminates an other [Sound-Wave](40200001.md) by [Superposition](10000065.md).
+An Anti-Sound-Wave is an [Anti-Wave](10000081.md) for [Sound](40200001.md).
