--- a/10100003.md
+++ b/10100003.md
@@ -1,3 +1,3 @@
 # Liquid
 
-A Liquid is a [Thing](60003.md) in a [Chemistry-System](10100001.md).
+This Number-File is no longer maintained, [here](10000035.md) you can find its living Gemini.
