--- a/9000141.md
+++ b/9000141.md
@@ -1,3 +1,3 @@
-# User
+# Git-Log-Command
 
-A User has the [Usage-Right](60049.md) to the [Services](600067.md) of a [System](60052.md).
+The Git-Log-Command ...
