--- a/23.md
+++ b/23.md
@@ -65,6 +65,67 @@
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
+#### Blog-Chain-Time 2023.10.13-19:12 in Tübingen <a id="12010"/>
+###### Topics: Zero-Wave-Theory, Dings-Patent
+
+Because I like the Idea with the [Zero-Wave-Device](20000021.md), I now file a Draft for my very first [Dings-Patent](300000030.md), that is simply called the [Zero-Wave-Device-Patent](300050001.md).
+
+But how can I prove that this was really my Idea?
+
+The Solution is a [Block-Chain](300000000.md): Because up to now I have not yet implemented my own Version of that, for the Time being I (miss-)use [Git](9000197.md). For this System [Checksums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
+
+My "Git-Blockchain" can be downloaded by Everybody using with the following [Git-Clone-Command](9000086.md) to checkout the Zero-Repository:
+
+```bash
+$ git clone git@github.com:All-Dings/0.git
+```
+
+This creates a Directory "0", hat contains the complete History for this Repository.  After the Checkout has been done, it is possible to regulary get the latest Updates with the [Git-Pull-Command](9000094.md):
+
+```bash
+$ cd 0
+$ git pull
+remote: Enumerating objects: 4, done.
+remote: Counting objects: 100% (4/4), done.
+remote: Compressing objects: 100% (1/1), done.
+remote: Total 3 (delta 1), reused 3 (delta 1), pack-reused 0
+Unpacking objects: 100% (3/3), 250 bytes | 250.00 KiB/s, done.
+From github.com:All-Dings/777
+   2e70928..fafe410  Master     -> origin/Master
+Updating 2e70928..fafe410
+Fast-forward
+ test | 1 +
+ 1 file changed, 1 insertion(+)
+ create mode 100644 test
+```
+
+With the [Git-Log-Command](9000141.md), One can see the History of the different [Git-Commits](9000070.md):
+
+```bash
+$ git log
+commit fafe410c6cb4a42c9690c022140e7de7b31433ac (HEAD -> Master, origin/Master, origin/HEAD)
+Author: Michael Holzheu <michael@holzheu.de>
+Date:   Sat Oct 14 19:31:36 2023 +0200
+
+    Add Test
+
+...
+```
+
+In case I would change Entries in the History, this Command will fail:
+
+```bash
+19:39 $ git pull
+hint: You have divergent branches and need to specify how to reconcile them.
+fatal: Need to specify how to reconcile divergent branches.
+```
+
+So for now this is a good-enough Solution for the [Proof](600022.md), that I really did "Something" at a given Time.
+
+Since 2023.04.08 with [My-IBM-Room-Mate-Friend](1971091166.md) I already have at least one Person, who regularily verfies the Zero-Repository - up to now without any Complaints.
+
+But of course Everybody else is also invited to become a [Witness](670034.md) of [The-Truth](600140.md) for the [Dings-Project](300000006.md).
+
 #### Blog-Chain-Time 2023.10.12-15:40 in Tübingen <a id="12008"/>
 ###### Topics: Zero-Wave-Theory, Invention
 
