--- a/23.md
+++ b/23.md
@@ -80,20 +80,21 @@ My "Git-Blockchain" can be downloaded by Everybody using with the following [Git
 $ git clone git@github.com:All-Dings/0.git
 ```
 
-This creates a Directory "0", hat contains the complete History for this Repository.  After the Checkout has been done, it is possible to regulary get the latest Updates with the [Git-Pull-Command](9000094.md):
+This creates a Directory "0", hat contains the complete History for this Repository. After the Checkout has been done, it is possible to regulary get the latest Updates by first changing into the "0"-Directory ...
 
 ```bash
 $ cd 0
+```
+
+... and then issuing the [Git-Pull-Command](9000094.md):
+
+```bash
 $ git pull
 remote: Enumerating objects: 4, done.
-remote: Counting objects: 100% (4/4), done.
-remote: Compressing objects: 100% (1/1), done.
 remote: Total 3 (delta 1), reused 3 (delta 1), pack-reused 0
-Unpacking objects: 100% (3/3), 250 bytes | 250.00 KiB/s, done.
 From github.com:All-Dings/777
    2e70928..fafe410  Master     -> origin/Master
 Updating 2e70928..fafe410
-Fast-forward
  test | 1 +
  1 file changed, 1 insertion(+)
  create mode 100644 test
@@ -108,8 +109,6 @@ Author: Michael Holzheu <michael@holzheu.de>
 Date:   Sat Oct 14 19:31:36 2023 +0200
 
     Add Test
-
-...
 ```
 
 In case I would change Entries in the History, this Command will fail:
