--- a/10000082.md
+++ b/10000082.md
@@ -1,3 +1,3 @@
-# Original-Wave
+# Sound-Wave
 
-A Original-Wave is the [Opposite](60103.md) of an [Anti-Wave](10000081.md).
+A Sound-Wave is a [Wave](40200001.md) of [Matter](10000034.md).
