--- a/23.md
+++ b/23.md
@@ -80,7 +80,9 @@ My "Git-Blockchain" can be downloaded by Everybody using with the following [Git
 $ git clone git@github.com:All-Dings/0.git
 ```
 
-This creates a Directory "0", hat contains the complete History for this Repository. After the Checkout has been done, it is possible to regulary get the latest Updates by first changing into the "0"-Directory ...
+This creates a Directory "0", hat contains the complete History for this Repository.
+
+After the Checkout has been done, it is possible to regulary get the latest Updates by first changing into the "0"-Directory ...
 
 ```bash
 $ cd 0
@@ -119,7 +121,7 @@ hint: You have divergent branches and need to specify how to reconcile them.
 fatal: Need to specify how to reconcile divergent branches.
 ```
 
-So for now this is a good-enough Solution for the [Proof](600022.md), that I really did "Something" at a given Time.
+So for now this is a good-enough [Solution](600024.md) for the [Proof](600022.md), that I really did "Something" at a given [Time](610005.md).
 
 Since 2023.04.08 with [My-IBM-Room-Mate-Friend](1971091166.md) I already have at least one Person, who regularily verfies the Zero-Repository - up to now without any Complaints.
 
