Use better Example

--- a/23.md
+++ b/23.md
@@ -105,18 +105,17 @@ Updating 2e70928..fafe410
 With the [Git-Log-Command](9000141.md), One can see the History of the different [Git-Commits](9000070.md):
 
 ```bash
-$ git log
-commit fafe410c6cb4a42c9690c022140e7de7b31433ac (HEAD -> Master, origin/Master, origin/HEAD)
+commit 5c973ec27e7220239eb55efc50c153f6b0f140b0
 Author: Michael Holzheu <michael@holzheu.de>
-Date:   Sat Oct 14 19:31:36 2023 +0200
+Date:   Sat Oct 14 20:15:13 2023 +0200
 
-    Add Test
+    Add Zero-Wave-Device-Patent
 ```
 
 In case I would change Entries in the History, this Command will fail:
 
 ```bash
-19:39 $ git pull
+$ git pull
 hint: You have divergent branches and need to specify how to reconcile them.
 fatal: Need to specify how to reconcile divergent branches.
 ```
