--- a/23.md
+++ b/23.md
@@ -68,7 +68,9 @@
 #### Blog-Chain-Time 2023.10.13-19:12 in Tübingen <a id="12010"/>
 ###### Topics: Zero-Wave-Theory, Dings-Patent
 
-Because I like the Idea with the [Zero-Wave-Device](20000021.md), I now file a Draft for my very first [Dings-Patent](300000030.md), that is simply called the [Zero-Wave-Device-Patent](300050001.md).
+Because I like the Idea with the [Zero-Wave-Device](20000021.md), I now file a Draft for my very first [Dings-Patent](300000030.md), that is simply called:
+
+- [The-Zero-Wave-Device-Patent](300050001.md).
 
 But how can I prove that this was really my Idea?
 
