--- a/23.md
+++ b/23.md
@@ -70,7 +70,7 @@
 
 Because I like the Idea with the [Zero-Wave-Device](20000021.md), I now file a Draft for my very first [Dings-Patent](300000030.md), that is simply called:
 
-- [The-Zero-Wave-Device-Patent](300050001.md).
+- [The-Zero-Wave-Device-Patent](300050001.md)
 
 But how can I prove that this was really my Idea?
 
