Make it consistent

--- a/23.md
+++ b/23.md
@@ -76,7 +76,7 @@ But how can I prove that this was really my Idea?
 
 The Solution is a [Block-Chain](300000000.md): Because up to now I have not yet implemented my own Version, for the Time being I (miss-)use [Git](9000197.md). For this System [Checksums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
 
-My "Git-Blockchain" can be downloaded by Everybody using with the following [Git-Clone-Command](9000086.md) to checkout the Zero-Repository:
+My "Git-Block-Chain" can be downloaded by Everybody using with the following [Git-Clone-Command](9000086.md) to checkout the Zero-Repository:
 
 ```bash
 $ git clone git@github.com:All-Dings/0.git
