--- a/23.md
+++ b/23.md
@@ -74,7 +74,7 @@ Because I like the Idea with the [Zero-Wave-Device](20000021.md), I now file a D
 
 But how can I prove that this was really my Idea?
 
-The Solution is a [Block-Chain](300000000.md): Because up to now I have not yet implemented my own Version, for the Time being I (miss-)use [Git](9000197.md). For this System [Checksums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
+The Solution is a [Block-Chain](300000000.md): Because up to now I have not yet implemented my own Version, for the Time being I (miss-)use the [Git-System](9000197.md), where [Checksums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
 
 My "Git-Block-Chain" can be downloaded by Everybody using with the following [Git-Clone-Command](9000086.md) to checkout the Zero-Repository:
 
