--- a/23.md
+++ b/23.md
@@ -126,7 +126,7 @@ So for now this is a good-enough [Solution](600024.md) for the [Proof](600022.md
 
 Since 2023.04.08 with [My-IBM-Room-Mate-Friend](1971091166.md) I already have at least one Person, who regularily verfies the Zero-Repository - up to now without any Complaints.
 
-But of course Everybody else is also invited to become a [Witness](670034.md) of [The-Truth](600140.md) for the [Dings-Project](300000006.md).
+But of course Everybody else is also invited to become a [Witness](670034.md) for [The-Truth](600140.md) in the [Dings-Project](300000006.md).
 
 #### Blog-Chain-Time 2023.10.12-15:40 in Tübingen <a id="12008"/>
 ###### Topics: Zero-Wave-Theory, Invention
