--- a/23.md
+++ b/23.md
@@ -74,7 +74,7 @@ Because I like the Idea with the [Zero-Wave-Device](20000021.md), I now file a D
 
 But how can I prove that this was really my Idea?
 
-The Solution is a [Block-Chain](300000000.md): Because up to now I have not yet implemented my own Version, for the Time being I (miss-)use the [Git-System](9000197.md), where [Check-Sums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
+The Solution is a [Block-Chain](300000000.md): Because up to now I have not yet implemented my own Version, for the Time being I use the [Git-System](9000197.md), where [Check-Sums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
 
 My "Git-Block-Chain" can be downloaded by Everybody using with the following [Git-Clone-Command](9000086.md) to checkout the Zero-Repository:
 
@@ -82,7 +82,12 @@ My "Git-Block-Chain" can be downloaded by Everybody using with the following [Gi
 $ git clone git@github.com:All-Dings/0.git
 ```
 
-This creates a Directory "0", hat contains the complete History for this Repository.
+This creates a Directory "0", hat contains the complete History for this Repository:
+
+```bash
+$ ls 0/
+0
+```
 
 After the Checkout has been done, it is possible to regulary get the latest Updates by first changing into the "0"-Directory ...
 
@@ -104,7 +109,7 @@ Updating 2e70928..fafe410
  create mode 100644 test
 ```
 
-With the [Git-Log-Command](9000141.md), One can see the History of the different [Git-Commits](9000070.md):
+With the [Git-Log-Command](9000141.md) it is possible to inspect the History of the different [Git-Commits](9000070.md):
 
 ```bash
 commit 5c973ec27e7220239eb55efc50c153f6b0f140b0
