--- a/23.md
+++ b/23.md
@@ -76,7 +76,7 @@ But how can I prove that this was really my Idea?
 
 The Solution is a [Block-Chain](300000000.md): Because up to now I have not yet implemented my own Version, for the Time being I use the [Git-System](9000197.md), where [Check-Sums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
 
-My "Git-Block-Chain" can be downloaded by Everybody using with the following [Git-Clone-Command](9000086.md) to checkout the Zero-Repository:
+My "Git-Block-Chain" can be downloaded by Everybody using with the following [Git-Clone-Command](9000086.md) to checkout the Zero-[Repository](9000050.md):
 
 ```bash
 $ git clone git@github.com:All-Dings/0.git
@@ -85,11 +85,11 @@ $ git clone git@github.com:All-Dings/0.git
 This creates a Directory "0", hat contains the complete History for this Repository:
 
 ```bash
-$ ls 0/
+$ ls
 0
 ```
 
-After the Checkout has been done, it is possible to regulary get the latest Updates by first changing into the "0"-Directory ...
+After the Checkout it is possible to regulary get the latest Updates by first changing into the "0"-Directory ...
 
 ```bash
 $ cd 0
@@ -109,7 +109,7 @@ Updating 2e70928..fafe410
  create mode 100644 test
 ```
 
-With the [Git-Log-Command](9000141.md) it is possible to inspect the History of the different [Git-Commits](9000070.md):
+With the [Git-Log-Command](9000141.md) you can inspect the History of the different [Git-Commits](9000070.md):
 
 ```bash
 commit 5c973ec27e7220239eb55efc50c153f6b0f140b0
@@ -127,7 +127,7 @@ hint: You have divergent branches and need to specify how to reconcile them.
 fatal: Need to specify how to reconcile divergent branches.
 ```
 
-So for now this is a good-enough [Solution](600024.md) for the [Proof](600022.md), that I really did "Something" at a given [Time](610005.md).
+So for now this is a pragmatic [Solution](600024.md) for the [Proof](600022.md) of what I have done  at a given [Time](610005.md).
 
 Since 2023.04.08 with [My-IBM-Room-Mate-Friend](1971091166.md) I already have at least one Person, who regularily verfies the Zero-Repository - up to now without any Complaints.
 
