Use better Word

--- a/23.md
+++ b/23.md
@@ -153,7 +153,7 @@ Depending on [The-Truth](600140.md), we now can build a [Device](20000000.md) ei
 
 But for this Case I give to Consideration, that the [Zero-Particles](10000061.md) might be channeled somehow into a [Parallel-Universe](10000075.md), where they are transformed again into Heat-Energy and then we would unintentionally produce [Global-Warming](400000002.md) for our [Alien-Friends](40000031.md), Damn!
 
-Fortunately my [Neighbour-Friend](1971091165.md) calms me down a bit with the [Argument](600151.md), that the Energy could also be sent to an [Inanimate-Universe](10000077.md) without [Violation](60075.md) of any [Ethic-Rules](14400001.md).
+Fortunately my [Neighbour-Friend](1971091165.md) calms me down a bit with the [Argument](600151.md), that the Energy could also be sent to an [Dead-Universe](10000077.md) without [Violation](60075.md) of any [Ethic-Rules](14400001.md).
 
 Either cool or not, here the first Concept-Drawing for the Function of my new [Invention](60124.md):
 
