Use better Word

--- a/23.md
+++ b/23.md
@@ -89,7 +89,7 @@ $ ls
 0
 ```
 
-After the Checkout it is possible to regulary get the latest Updates by first changing into the "0"-Directory ...
+After the Checkout it is possible to regulary get the latest Updates by first changing into the Zero-Directory ...
 
 ```bash
 $ cd 0
