--- a/10000002.md
+++ b/10000002.md
@@ -1,3 +1,3 @@
-# Time
+# Time-Interval
 
-Time is a [Dimension-Interval](10000033.md) for the [Time-Dimension](10000024.md).
+Time-Interval is a [Dimension-Interval](10000033.md) for the [Time-Dimension](10000024.md).
