--- a/23.md
+++ b/23.md
@@ -82,7 +82,7 @@ My "Git-Block-Chain" can be downloaded by Everybody using with the following [Gi
 $ git clone git@github.com:All-Dings/0.git
 ```
 
-This creates a Directory "0", hat contains the complete History for this Repository:
+This creates a Directory "0", hat contains the complete [History](10000086.md) for this Repository:
 
 ```bash
 $ ls
@@ -109,7 +109,7 @@ Updating 2e70928..fafe410
  create mode 100644 test
 ```
 
-With the [Git-Log-Command](9000141.md) you can inspect the History of the different [Git-Commits](9000070.md):
+With the [Git-Log-Command](9000141.md) you can inspect the [History](10000086.md) of the different [Git-Commits](9000070.md):
 
 ```bash
 commit 5c973ec27e7220239eb55efc50c153f6b0f140b0
