--- a/23.md
+++ b/23.md
@@ -129,7 +129,7 @@ fatal: Need to specify how to reconcile divergent branches.
 
 So for now this is a pragmatic [Solution](600024.md) for the [Proof](600022.md) of what I have done  at a given [Time](610005.md).
 
-Since 2023.04.08 with [My-IBM-Room-Mate-Friend](1971091166.md) I already have at least one Person, who regularily verfies the Zero-Repository - up to now without any Complaints.
+Since 2023.04.08 with [My-IBM-Room-Mate-Friend](1971091166.md) I already have at least one Person, who regularily verfies the Zero-Repository, and up to now without any Complaints.
 
 But of course Everybody else is also invited to become a [Witness](670034.md) for [The-Truth](600140.md) in the [Dings-Project](300000006.md).
 
