--- a/23.md
+++ b/23.md
@@ -127,7 +127,7 @@ hint: You have divergent branches and need to specify how to reconcile them.
 fatal: Need to specify how to reconcile divergent branches.
 ```
 
-So for now this is a pragmatic [Solution](600024.md) for the [Proof](600022.md) of what I have done at a given [Time](610005.md) and since 2023.04.08 with [My-IBM-Room-Mate-Friend](1971091166.md) I have at least one Person, who already regularily verfies the Zero-Repository without any Complaints.
+So for now this is a pragmatic [Solution](600024.md) for the [Proof](600022.md) of what I have done at a given [Time](610005.md) and since 2023.04.08 with [My-IBM-Room-Mate-Friend](1971091166.md) I have at least one Person, who already regularily verfies the Zero-Repository.
 
 But of course Everybody else is also invited to become a [Witness](670034.md) for [The-Truth](600140.md) in the [Dings-Project](300000006.md).
 
